--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
- 
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
