--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-image-magnify": "^2.7.4",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
     "slick-carousel": "^1.8.1",
     "use-reducer-logger": "^1.0.2",
